2013-09-09  Andrew John Hughes  <gnu.andrew@redhat.com>

	* acinclude.m4:
	(IT_SET_ARCH_SETTINGS): Add -D_LITTLE_ENDIAN to arm
	and support arm64|aarch64.
	(IT_ENABLE_ZERO_BUILD): Explicitly set ZERO_BITSPERWORD
	for aarch64, alpha, arm, ia64 && sh.  Replace sparc64 with
	sparcv9 which is what INSTALL_ARCH_DIR is set to.

2013-08-30  Andrew John Hughes  <gnu.andrew@redhat.com>

	* INSTALL: Update with --enable-system-kerberos
	option.
	* Makefile.am:
	(ICEDTEA_ENV): Set SYSTEM_KRB5, KRB5_LIBS
	and KRB5_CFLAGS.
	* acinclude.m4:
	(IT_CHECK_FOR_KERBEROS): Add --enable-system-kerberos
	option (on by default) which checks for libkrb5 and
	the krb5.h header.
	* configure.ac: Invoke IT_CHECK_FOR_KERBEROS.

2013-07-24  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	* acinclude.m4:
	(IT_CHECK_FOR_LCMS): Turn system LCMS on by
	default if the version is 2.5 or above with the
	latest security fixes.

2013-09-19  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	* Makefile.am:
	(OPENJDK_VERSION): Set to b00.
	(JDK_UPDATE_VERSION): Set to 60.
	(CORBA_CHANGESET): Update to current HEAD.
	(JAXP_CHANGESET): Likewise.
	(JAXWS_CHANGESET): Likewise.
	(JDK_CHANGESET): Likewise.
	(LANGTOOLS_CHANGESET): Likewise.
	(OPENJDK_CHANGESET): Likewise.
	(CORBA_SHA256SUM): Likewise.
	(JAXP_SHA256SUM): Likewise.
	(JAXWS_SHA256SUM): Likewise.
	(JDK_SHA256SUM): Likewise.
	(LANGTOOLS_SHA256SUM): Likewise.
	(OPENJDK_SHA256SUM): Likewise.
	* hotspot.map: Update to HEAD.
	* patches/boot/ecj-diamond.patch:
	Regenerated.
	* patches/boot/ecj-trywithresources.patch:
	Add case in java.nio.file.Files.

2013-09-17  Xerxes Rånby  <xerxes@zafena.se>
	    Robert Lougher  <rob@jamvm.org.uk>

	JamVM
	- JSR 335: fix frame.c
	- Add support for CallerSensitive
	- JSR 335: handle interfaces when resolving a method
	- sun.misc.Unsafe: additional methods get/putAddress
	- JSR 292: make internal functions static
	* NEWS: Updated. Removed note about JSR 355 for IcedTea 2.